--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ github_username: escsvfu
 
 # Build settings
 markdown: kramdown
-theme: minima
-remote_theme: pages-themes/slate@v0.2.0
+theme: slate
+#remote_theme: pages-themes/slate@v0.2.0
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
