--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ github_username: escsvfu
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-slate
+theme: minima
 #remote_theme: pages-themes/slate@v0.2.0
 plugins:
   - jekyll-feed
