--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Вестник СВФУ
 description: Научный журнал, периодическое издание, основан в 2004 г. Учредитель и издатель - Северо-Восточный федеральный университет имени М.К. Аммосова.
-show_downloads: true
+show_downloads: false
 google_analytics: G-LMS9R7KWBB
 theme: jekyll-theme-slate
